Fixed icons not showing up on static page.
Added white background to Hero and InlineCTA text.
Reverted custom schema typing.

--- a/src/components/widgets/Hero/Hero.module.scss
+++ b/src/components/widgets/Hero/Hero.module.scss
@@ -41,6 +41,10 @@
   position: relative;
 }
 
+.subHeader {
+  background-color: c('white');
+}
+
 .button {
   margin: 0 auto;
   margin-top: 0.5rem;
