--- a/src/components/widgets/InlineCta/InlineCta.module.scss
+++ b/src/components/widgets/InlineCta/InlineCta.module.scss
@@ -29,6 +29,8 @@
     justify-content: space-between;
     align-items: center;
 
+    background-color: c('white');
+
     @include media('<=phoneLandscape') {
       flex-direction: column;
       justify-content: flex-start;
